--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,17 +5,22 @@
   "dependencies": {
     "@craco/craco": "^6.4.3",
     "@headlessui/react": "^1.4.2",
+    "@openzeppelin/contracts": "^4.7.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "ethers": "^5.6.9",
+    "ipfs-http-client": "^57.0.3",
+    "n": "^9.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.4.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.4",
-    "web-vitals": "^1.0.1"
+    "stable": "^0.1.8",
+    "web-vitals": "^1.0.1",
+    "web3modal": "^1.9.8"
   },
   "scripts": {
     "start": "craco start",
