--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,65 +1,64 @@
 {
-  "name": "cra-tailwind-eslint",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@craco/craco": "^6.4.3",
-    "@headlessui/react": "^1.4.2",
-    "@openzeppelin/contracts": "^4.7.1",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "ethers": "^5.6.9",
-    "ipfs-http-client": "^57.0.3",
-    "n": "^9.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.4.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "react-toastify": "^7.0.4",
-    "stable": "^0.1.8",
-    "web-vitals": "^1.0.1",
-    "web3modal": "^1.9.8"
-  },
-  "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "autoprefixer": "^9.8.8",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb": "^19.0.0",
-    "eslint-config-node": "^4.1.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.27.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "postcss": "^7.0.39",
-    "prettier": "^2.4.1",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
-  }
+	"name": "cra-tailwind-eslint",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@craco/craco": "^5.9.0",
+		"@headlessui/react": "^1.4.2",
+		"@openzeppelin/contracts": "^4.7.1",
+		"@testing-library/jest-dom": "^5.11.4",
+		"@testing-library/react": "^11.1.0",
+		"@testing-library/user-event": "^12.1.10",
+		"ethers": "^5.6.9",
+		"ipfs-http-client": "^57.0.3",
+		"n": "^9.0.0",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"react-icons": "^4.4.0",
+		"react-router-dom": "^5.2.0",
+		"react-scripts": "^5.0.1",
+		"react-toastify": "^7.0.4",
+		"stable": "^0.1.8",
+		"web-vitals": "^1.0.1",
+		"web3modal": "^1.9.8"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"autoprefixer": "^9.8.8",
+		"eslint": "^7.32.0",
+		"eslint-config-airbnb": "^19.0.0",
+		"eslint-config-node": "^4.1.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-import": "^2.25.3",
+		"eslint-plugin-jsx-a11y": "^6.5.1",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-prettier": "^4.0.0",
+		"eslint-plugin-react": "^7.27.0",
+		"eslint-plugin-react-hooks": "^4.3.0",
+		"postcss": "^8.4.14",
+		"postcss-flexbugs-fixes": "^5.0.2",
+		"postcss-preset-env": "^7.7.2",
+		"prettier": "^2.4.1",
+		"tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
+	},
+	"peerDependencies": {
+		"postcss": "^8.4.14"
+	}
 }
