--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,9 @@
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
+		"axios": "^0.27.2",
 		"ethers": "^5.6.9",
 		"ipfs-http-client": "^57.0.3",
-		"n": "^9.0.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-icons": "^4.4.0",
