--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
+		"chart.js": "^3.8.0",
+		"react-chartjs-2": "^4.3.1",
 		"axios": "^0.27.2",
 		"ethers": "^5.6.9",
 		"ipfs-http-client": "^57.0.3",
