--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
 	"private": true,
 	"dependencies": {
 		"@craco/craco": "^5.9.0",
+		"@ffmpeg-installer/ffmpeg": "^1.1.0",
 		"@headlessui/react": "^1.4.2",
 		"@openzeppelin/contracts": "^4.7.1",
 		"@testing-library/jest-dom": "^5.11.4",
@@ -12,6 +13,7 @@
 		"axios": "^0.27.2",
 		"chart.js": "^3.8.0",
 		"ethers": "^5.6.9",
+		"fluent-ffmpeg": "^2.1.2",
 		"ipfs-http-client": "^57.0.3",
 		"react": "^17.0.2",
 		"react-chartjs-2": "^4.3.1",
