--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
 		"axios": "^0.27.2",
+		"buffer": "^6.0.3",
 		"chart.js": "^3.8.0",
 		"ethers": "^5.6.9",
 		"fluent-ffmpeg": "^2.1.2",
